# IC4Ext

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: apply-output-queue-resize.yml  apply-per-output-resize-pr.yml  apply-per-output-resize.yml  apply-video-encoder-type-fix.yml  apply_ic4_validity_patch.yml  create-v1.0.2-tag.yml  run-output-queue-resize.yml
cmake/: IC4ExtDxcRuntime.cmake  IC4ExtOpenCVRuntime.cmake
docs/: MULTI_CAMERA_STARTUP.md  README.md  READONLY_FRAME_USAGE.md  V2_PIPELINE_POLICY.md
docs/d3d11/: READONLY_PIPELINE.md  SYNTHETIC_FRAME_SOURCE.md
docs/d3d12/: READONLY_PIPELINE.md  SYNTHETIC_FRAME_SOURCE.md  VALIDATION_AND_TUNING.md
docs/design/: .runtime_output_queue_note  00_OverallDesign.md  01_CoreTypes.md  02_IC4DeviceAndStream.md  03_D3D11Backend.md  04_FormatConversion.md  05_CameraCapture.md  06_CameraCaptureThread.md  07_FrameSyncThread.md  08_BuildAndSampleTest.md  09_DummyCameraCaptureAndControlSink.md  10_D3D12Backend.md  11_BackendSelection.md  12_D3D12FrameSyncThread.md  13_ReadbackAndCpuFrame.md  14_CurrentStatusAndRoadmap.md  15_CopiedOutputSampling.md  15_DXCRuntime.md  16_RuntimeOutputQueues.md  17_OutputQueueResize.md  IC4Ext_SelfContainedDesign_v1_3_FULL.md  README_RuntimeOutputQueues.txt
docs/future/: SoftwareTriggerSynchronization.md
docs/releases/: v1.0.1.md
docs/usage/: 04_MultiCameraDisplayRecordAnalysis.md
docs/v2/: D3D12_FOUNDATION.md
include/IC4Ext/: BackendConfig.hpp  Config.hpp  IC4Ext.hpp  Version.hpp
include/IC4Ext/Core/: CameraControl.hpp  CoreTypes.hpp  CpuFrame.hpp  Error.hpp  IC4ChunkMetadata.hpp  IC4DeviceSelector.hpp  IC4SdkValidityCompatibility.hpp  MultiCameraStartup.hpp
include/IC4Ext/D3D11/: CameraCapture.hpp  CameraCaptureThread.hpp  D3D11BackendContext.hpp  D3D11Camera.hpp  D3D11CameraCapture.hpp  D3D11CameraCaptureThread.hpp  D3D11CameraFrame.hpp  D3D11ContextSynchronization.hpp  D3D11DummyCameraCapture.hpp  D3D11DummyCameraCaptureGenerator.hpp  D3D11FenceManager.hpp  D3D11FrameConverter.hpp  FramePool.hpp  (+16 more)
samples/IC4DeviceDiagnostics/: CMakeLists.txt  README.md  main.cpp
samples/MultiCameraAnalysisDisplayD3D12/: CMakeLists.txt  README.md  main.cpp  main_compat.cpp
samples/MultiCameraAnalysisDisplayD3D12/config/: gamma1.json
samples/MultiCameraReadOnlySyncD3D11/: CMakeLists.txt  main.cpp
samples/MultiCameraReadOnlySyncD3D12/: CMakeLists.txt  main.cpp
samples/MultiCameraSyncDisplayD3D12/: CMakeLists.txt  README.md  main.cpp
samples/MultiPipelineStressD3D11/: CMakeLists.txt  PipelineWorkers.cpp  PipelineWorkers.hpp  README.md  SobelProcessor.cpp  SobelProcessor.hpp  StressRunner.cpp  StressSupport.cpp  StressSupport.hpp
samples/MultiPipelineStressD3D12/: CMakeLists.txt  PipelineWorkers.cpp  PipelineWorkers.hpp  README.md  SobelProcessor.cpp  SobelProcessor.hpp  StressMain.cpp  StressRunner.cpp  StressSupport.cpp  StressSupport.hpp  main.cpp
samples/SingleCameraLog/: CMakeLists.txt  main.cpp
samples/SingleCameraLogD3D12/: CMakeLists.txt  main.cpp
samples/SingleCameraReadOnlyReadbackD3D11/: CMakeLists.txt  main.cpp
samples/SingleCameraReadOnlyReadbackD3D12/: CMakeLists.txt  main.cpp
samples/SingleCameraReadback/: CMakeLists.txt  main.cpp
samples/SingleCameraReadbackD3D12/: CMakeLists.txt  main.cpp
shaders/d3d11/: IC4Ext_Convert_BGR8_To_RGBA8.hlsl  IC4Ext_Convert_BGRa8_To_RGBA8.hlsl  IC4Ext_Convert_Bayer8_To_RGBA8.hlsl  IC4Ext_Convert_Mono8_To_R8.hlsl  IC4Ext_Convert_Mono8_To_RGBA8.hlsl
shaders/d3d12/: IC4Ext_D3D12_Convert_To_R8.hlsl  IC4Ext_D3D12_Convert_To_RGBA8.hlsl
src/Core/: Config.cpp  CpuFrame.cpp  IC4ChunkMetadata.hpp  IC4PerformanceUtil.hpp
src/D3D11/: D3D11CameraCapture.cpp  D3D11CameraCaptureThread.cpp  D3D11CameraSync.cpp  D3D11DummyCameraCapture.cpp  D3D11DummyCameraCaptureGenerator.cpp  D3D11FenceManager.cpp  D3D11FrameConverter.cpp  D3D11FrameCopier.cpp  D3D11FrameReadback.cpp  D3D11FrameResizer.cpp  D3D11FrameResizer.hpp  D3D11FrameSyncThread.cpp  D3D11ReadyToken.cpp  FramePool.cpp  PooledFrameConverter.cpp  ReadOnlyCameraCapture.cpp  ReadOnlyCameraCaptureThread.cpp  ReadOnlyFrame.cpp  ReadOnlyFrameLifetimeTracker.cpp  ReadOnlyFrameSet.cpp  ReadOnlyFrameStorage.hpp  SyntheticFrameSource.cpp  TimestampFrameSyncThread.cpp
src/D3D12/: D3D12CameraCapture.cpp  D3D12CameraCaptureThread.cpp  D3D12CameraSync.cpp  D3D12DummyCameraCapture.cpp  D3D12DummyCameraCaptureGenerator.cpp  D3D12FenceManager.cpp  D3D12FrameConverter.cpp  D3D12FrameCopier.cpp  D3D12FrameReadback.cpp  D3D12FrameResizer.cpp  D3D12FrameResizer.hpp  D3D12FrameSyncThread.cpp  D3D12ReadyToken.cpp  FramePool.cpp  PooledFrameConverter.cpp  ReadOnlyCameraCapture.cpp  ReadOnlyCameraCaptureThread.cpp  ReadOnlyFrame.cpp  ReadOnlyFrameLifetimeTracker.cpp  ReadOnlyFrameSet.cpp  ReadOnlyFrameStorage.hpp  SyntheticFrameSource.cpp  TimestampFrameSyncThread.cpp
tests/: CMakeLists.txt  TestCameraUtils.hpp  test_backend_config.cpp  test_camera1_long_run_stress.cpp  test_camera1_readback_integration.cpp  test_camera2plus_frame_sync_smoke.cpp  test_chunk_metadata.cpp  test_core.cpp  test_cpu_frame.cpp  test_d3d11_camera_capture_thread_outputs.cpp  test_d3d11_camera_capture_thread_resize.cpp  test_d3d11_dummy_camera_capture.cpp  test_d3d11_frame_readback.cpp  test_d3d11_frame_sync_thread.cpp  test_d3d11_multi_camera_startup.cpp  test_d3d11_pooled_converter_device.cpp  test_d3d11_readonly_pipeline.cpp  test_d3d11_synthetic_source_sync_integration.cpp  test_d3d12_camera_capture_thread_outputs.cpp  test_d3d12_camera_capture_thread_resize.cpp  test_d3d12_core.cpp  test_d3d12_dummy_camera_capture.cpp  test_d3d12_dummy_capture_sync_integration.cpp  test_d3d12_frame_readback.cpp  test_d3d12_frame_sync_thread.cpp  test_d3d12_multi_camera_startup.cpp  test_d3d12_pooled_converter_device.cpp  test_d3d12_readonly_pipeline.cpp  test_d3d12_shader_compile.cpp  test_d3d12_shader_reference.cpp  test_d3d12_synthetic_source_sync_integration.cpp  test_multi_camera_startup_core.cpp  test_multi_camera_startup_integration.cpp  test_no_camera_pipeline_stress.cpp  test_single_camera_smoke.cpp  test_v2_d3d12_foundation.cpp
(+46 files in other folders)
